fix: resolve PostCSS build error for Next.js 16 Turbopack

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.24",
     "next": "^16.1.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
